--- a/examples/html/Blending.html
+++ b/examples/html/Blending.html
@@ -22,6 +22,9 @@
 </pre>
 -->
 
-<span class=footer>curves-1.0.1: Ulf Norell &lt;ulf.norell@gmail.com&gt;<span class=right>Sat Feb  8 13:02:28 CET 2014</span></span>
-</body></html>
+<hr class=footnote-sep><div class=footnotes>
+
+
+<span class=footer>curves-1.0.1: Ulf Norell &lt;ulf.norell@gmail.com&gt;<span class=right>Wed Feb 12 19:52:23 CET 2014</span></span>
+</div></body></html>
 
