[auto] updated gh-pages

--- a/examples/html/Basics.html
+++ b/examples/html/Basics.html
@@ -1,7 +1,7 @@
 
 <head><title>Basics</title><link href='http://fonts.googleapis.com/css?family=Open+Sans|Droid+Sans+Mono&subset=latin,greek-ext' rel='stylesheet' type='text/css'/><link href='../css/examples.css' rel='stylesheet' type='text/css'/></head>
 <body>
-<span class=header>curves-1.0.1: <a href=Examples.html>Examples</a> - <a href=../../dist/doc/html/curves/index.html>API</a><span class=right><a href=http://github.com/UlfNorell/curves>GitHub</a> - <a href=http://hackage.haskell.org/package/curves>Hackage</a></span></span>
+<span class=header>curves-1.1.0.1: <a href=Examples.html>Examples</a> - <a href=../../dist/doc/html/curves/index.html>API</a><span class=right><a href=http://github.com/UlfNorell/curves>GitHub</a> - <a href=http://hackage.haskell.org/package/curves>Hackage</a></span></span>
 
 
 <!--
@@ -354,6 +354,6 @@ confused.
 
 </div>
 
-<span class=footer>curves-1.0.1: Ulf Norell &lt;ulf.norell@gmail.com&gt;<span class=right>Wed Feb 12 19:52:21 CET 2014</span></span>
+<span class=footer>curves-1.1.0.1: Ulf Norell &lt;ulf.norell@gmail.com&gt;<span class=right>Sat Oct 18 09:12:46 EEST 2014</span></span>
 </div></body></html>
 
