--- a/examples/html/Styles.html
+++ b/examples/html/Styles.html
@@ -1,7 +1,7 @@
 
 <head><title>Styles</title><link href='http://fonts.googleapis.com/css?family=Open+Sans|Droid+Sans+Mono&subset=latin,greek-ext' rel='stylesheet' type='text/css'/><link href='../css/examples.css' rel='stylesheet' type='text/css'/></head>
 <body>
-<span class=header>curves-1.0.1: <a href=Examples.html>Examples</a> - <a href=../../dist/doc/html/curves/index.html>API</a><span class=right><a href=http://github.com/UlfNorell/curves>GitHub</a> - <a href=http://hackage.haskell.org/package/curves>Hackage</a></span></span>
+<span class=header>curves-1.1.0.1: <a href=Examples.html>Examples</a> - <a href=../../dist/doc/html/curves/index.html>API</a><span class=right><a href=http://github.com/UlfNorell/curves>GitHub</a> - <a href=http://hackage.haskell.org/package/curves>Hackage</a></span></span>
 
 
 <!--
@@ -25,6 +25,6 @@
 <hr class=footnote-sep><div class=footnotes>
 
 
-<span class=footer>curves-1.0.1: Ulf Norell &lt;ulf.norell@gmail.com&gt;<span class=right>Wed Feb 12 19:52:22 CET 2014</span></span>
+<span class=footer>curves-1.1.0.1: Ulf Norell &lt;ulf.norell@gmail.com&gt;<span class=right>Sat Oct 18 09:12:49 EEST 2014</span></span>
 </div></body></html>
 
